# ulanzipixelclock

./: .gitignore  README.md  app.py  config.py  pyproject.toml  sleeprange.py
cfg/: abfuhrtermine-2023.ics  abfuhrtermine-2024.ics  abfuhrtermine-2025.ics  config.yml
modules/: advent.py  battery.py  bkw.py  car.py  clock.py  dash.py  dwdalerts.py  em3.py  forecast.py  pv.py  sleep.py  sunset.py  trash.py  wallbox.py  washing.py
