[project]
name = "mymagicclock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astral>=3.2",
    "dwdwfsapi>=1.1.0",
    "ics>=0.7.2",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "weconnect>=0.60.11",
]
